# mixel-music

./: .gitattributes  .gitignore  README.md  SECURITY.md  app.py  main.py  package-lock.json  package.json  requirements.txt
app/: example.env  main.py  pyproject.toml  requirements.txt
app/api/: __init__.py  albums.py  albums_api.py  artists.py  artists_api.py  artwork.py  artworks.py  auth.py  count.py  images.py  images_api.py  ping.py  stream.py  stream_api.py  streaming.py  tracks.py  tracks_api.py
app/api/auth/: __init__.py  logout.py  signin.py  signup.py
app/api/playlists/: __init__.py  playlist.py
app/api/server/: __init__.py  ping.py  users.py
app/api/sessions/: __init__.py
app/api/users/: __init__.py  users.py
app/api/v1/: albums.py  artists.py  (+3 more)
app/core/: albums_service.py  artworks.py  config.py  convert_data.py  convert_tools.py  database.py  depends.py  event_watcher.py  events.py  extract_tags.py  handler.py  image_task.py  library.py  library_changes.py  library_handler.py  library_scan.py  logger.py  logging.py  middleware.py  models.py  process_images.py  scanner.py  schema.py  services.py  tracks_service.py  watcher.py
app/infra/: config.py  convert_image.py  database.py  handle_path.py  init_logger.py  logging.py  loggings.py  path_handler.py  repository.py  session.py  setup_logger.py
app/models/: __init__.py  album.py  albums.py  artist.py  artists.py  artwork.py  artworks.py  playlist.py  playlists.py  setting.py  settings.py  track.py  tracks.py  user.py  users.py
app/repos/: library.py  playlist.py  user.py
app/service/: albums.py  tracks.py
app/services/: artwork.py  auth.py  database.py  library.py  library_scan.py  library_task.py  logger.py  playlist.py  scanner.py  session.py  user.py
app/static/: dark.css
app/tools/: convert_image.py  convert_value.py  convert_values.py  cover_images.py  extract_tags.py  path_handler.py  process_image.py  save_artwork.py  standard_path.py  tags_extractor.py  tags_handler.py
(+268 files in other folders)
